// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MiqAlertSetStructuredList should render alert set alerts structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_alert_set"
>
  <FeatureToggle(StructuredListBody)>
    <FeatureToggle(StructuredListRow)
      className="clickable"
      key="0"
      onClick={[Function]}
      tabIndex={0}
      title="View this Alert"
    >
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "cells": Array [
              Object {
                "icon": "pficon pficon-warning-triangle-o",
                "value": "Alert description",
              },
            ],
            "onclick": "DoNav('/miq_alert/show/1');",
            "title": "View this Alert",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
  </FeatureToggle(StructuredListBody)>
</FeatureToggle(StructuredListWrapper)>
`;

exports[`MiqAlertSetStructuredList should render alert set assigned structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_alert_set_assigned"
>
  <FeatureToggle(StructuredListBody)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="0"
      onClick={[Function]}
      tabIndex={0}
      title=""
    >
      <FeatureToggle(StructuredListCell)
        className="label_header"
      />
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "label": "The Enterprise",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="1"
      onClick={[Function]}
      tabIndex={1}
      title=""
    >
      <FeatureToggle(StructuredListCell)
        className="label_header"
      >
        Object class
      </FeatureToggle(StructuredListCell)>
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "label": "Object class",
            "value": Array [
              Object {
                "value": "path1",
              },
              Object {
                "value": "path2",
              },
              Object {
                "value": "path3",
              },
            ],
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
  </FeatureToggle(StructuredListBody)>
</FeatureToggle(StructuredListWrapper)>
`;

exports[`MiqAlertSetStructuredList should render alert set info structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_alert_set_info"
>
  <FeatureToggle(StructuredListBody)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="0"
      onClick={[Function]}
      tabIndex={0}
      title=""
    >
      <FeatureToggle(StructuredListCell)
        className="label_header"
      />
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "label": "Description",
            "value": "bar",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="1"
      onClick={[Function]}
      tabIndex={1}
      title=""
    >
      <FeatureToggle(StructuredListCell)
        className="label_header"
      />
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "label": "Mode",
            "value": "Mode",
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
  </FeatureToggle(StructuredListBody)>
</FeatureToggle(StructuredListWrapper)>
`;

exports[`MiqAlertSetStructuredList should render alert set notes structured list 1`] = `
<FeatureToggle(StructuredListWrapper)
  ariaLabel="Structured list"
  className="miq-structured-list miq_alert_set_notes"
>
  <FeatureToggle(StructuredListBody)>
    <FeatureToggle(StructuredListRow)
      className=""
      key="0"
      onClick={[Function]}
      tabIndex={0}
      title=""
    >
      <SummaryValue
        onClick={[Function]}
        row={
          Object {
            "value": Object {
              "input": "text_area",
              "readonly": true,
              "rows": 4,
              "text": "text area description",
            },
          }
        }
      />
    </FeatureToggle(StructuredListRow)>
  </FeatureToggle(StructuredListBody)>
</FeatureToggle(StructuredListWrapper)>
`;
